fix jump link routing

--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,8 @@
 
 /* Prevent font size inflation */
 html {
+  /* Adjustment so that reloading the page with #<id> scrolls to a nice position */
+  --top-padding: 64px;
   box-sizing: border-box;
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
@@ -22,8 +24,7 @@ html {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* Header is 90px tall */
-  scroll-padding-top: calc(90px + var(--tgph-spacing-4));
+  scroll-padding-top: var(--top-padding);
 }
 
 /* Remove default margin in favour of better control in authored CSS */
